kafka/5-kafka-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-route
  namespace: default

spec:
  entryPoints:
    - kafka

  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka
          port: 9092
